Adiciona Habilidades Tecnicas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>Estudante de Desenvolvimento Web na Trybe</h3>
     <p> Sou <strong>mineira</strong>, uai, tenho 30 anos e sou apaixonada pela cidade em que moro: <strong>BH</strong>! <br> Me formei em <strong>Publicidade e Propaganda</strong> pela UFMG, mas me apaixonei por <strong>Programação</strong> e pelo <strong>Mercado Financeiro</strong>, por isso me matriculei na Trybe para mudar a minha jornada.</p>
     <hr>
-    <h3 id="habilidades">Minhas habilidades</h3>
+    <h3 id="habilidades">Minhas habilidades - Soft Skills</h3>
     <p> Sou uma pessoa:</p>
     <ul>
         <li><strong>Empática</strong></li>
@@ -21,8 +21,18 @@
         <li>Estudiosa</li>
         <li><strong>Criativa</strong></li>
         <li>Otimista</li>
-        <li>Ambiciosa</li>
+        <li>Comprometida</li>
         <li><strong>Determinada</strong></li>
+    </ul>
+    <hr>
+    <h3 id="tecnicas">Habilidades Técnicas</h3>
+    <ul>
+        <li>PhotoShop - <strong>intermediário</strong></li>
+        <li>Illustrator - <strong>avançado</strong></li>
+        <li>LightRoom - <strong>intermediário</strong></li>
+        <li>Git - <strong>intermediário</strong></li>
+        <li>Inglês - <strong>avançado</strong></li>
+        <li>HTML - <strong>intermediário</strong></li>
     </ul>
     <hr>
     <h3 id="dica">#FicaDica</h3>
@@ -34,7 +44,7 @@
     <li> <a href="#foto">Minha Foto</a></li>
     <li> <a href="#eu">Quem Sou Eu</a></li>
     <li> <a href="#habilidades">Minhas Habilidades</a></li>
-    <li> <a href="#dica">#FicaDica</a></li>
+    <li> <a href=#tecnicas>Habilidades Técnicas</a></li>
     </ul>
 
 
