Adiciona o link #FicaDica ao menu Acesse Novamente

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <li> <a href="#foto">Minha Foto</a></li>
     <li> <a href="#eu">Quem Sou Eu</a></li>
     <li> <a href="#habilidades">Minhas Habilidades</a></li>
-    <li> <a href=#tecnicas>Habilidades Técnicas</a></li>
+    <li> <a href="#tecnicas">Habilidades Técnicas</a></li>
+    <li> <a href="#dica">#FicaDica</a></li>
     </ul>
 
 
